# macropad-ui

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml
public/via/: index.html
public/via/_snowpack/pkg/: downshift.js  react-router-dom.js  react-router.js
public/via/_snowpack/pkg/@the-via/: reader.js
public/via/_snowpack/pkg/common/: tslib.es6-cc2863e5.js
public/via/definitions/: hash.json  keyboard_names.json  supported_kbs.json
public/via/js/: lib-index-56d6bcf6.4ca5b53ef9037562a235.js  lib-react-select.955122d426f85402388b.js  lib-reader.fe5eca66c08a6e22950a.js
src/: App.vue  main.ts  mappings.ts  routes.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  error.rs  hid.rs  main.rs  packet.rs
src/components/: Connected.vue  MacropadItem.vue
src/views/: Main.vue  Processes.vue
