[package]
name = "macropad-ui"
version = "1.0.1"
description = "Macropad-UI"
authors = ["zacbre"]
license = ""
repository = "https://github.com/zacbre/macropad-ui"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "shell-open", "system-tray"] }
hidapi = "1.4.2"
anyhow = "1.0"
#sysinfo = { path = "../../sysinfo" }
sysinfo = "0.27.2"
nvml-wrapper = "0.8.0"
directories = "4.0.1"
auto-launch = "0.4.0"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_WindowsAndMessaging"
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
